Tooltip fix - remove z-index from article container, Helper function - appendQueryParam - prevent undefined error

--- a/public/css/src/components/article.less
+++ b/public/css/src/components/article.less
@@ -69,7 +69,6 @@
         @media screen and (min-width: 1280px) {
             width: ~"calc(100% - 560px)";
             position: relative;
-            z-index: 2;
         }
     }
 
